<resources>
    <string name="app_name">Bike Blooms</string>
    <string name="title_home">Home</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_profile">Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="register">Register</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="select_your_vehicle_type">Select your Vehicle Type</string>
    <string name="it_seems_you_dont_have_any_vehicles_added">It seems you don\'t have any Vehicles added</string>
    <string name="add_service">Add Service</string>
    <string name="my_vehicles">Vehicles</string>
    <string name="enter_additional_problems">Enter additional problems</string>
    <string name="select_vehicle_problem">Select Vehicle Problem</string>
    <string name="vehicle">Vehicle</string>
    <string name="inspection_charges">Inspection Charges</string>
    <string name="total_amount">Total Amount</string>
    <string name="address">Address</string>
    <string name="service_type">Service Type</string>
    <string name="vehicle_problems">Vehicle Problems</string>
    <string name="add_complaints">Add Complaints</string>
    <string name="add_or_change">Add or Change</string>
    <string name="engine_oil">Engine Oil</string>
    <string name="select_engine_oil">Select Engine Oil</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="requested_at">Requested at:</string>
    <string name="spares">Spares</string>
    <string name="service_details">Service Details</string>
    <string name="rupee_symbol">₹</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="delete_vehicle_msg">Are you sure want to delete this vehicle</string>
    <string name="search_for_places">Search for places</string>
    <string name="choose_your_service_type">Choose your Service Type</string>
    <string name="pick_and_drop_service_optional">Pick and Drop Service (Optional)</string>
    <string name="add_a_vehicle">Add a Vehicle</string>
    <string name="no_vehicle_added">No Vehicle added</string>
    <string name="select_your_vehicle">Select your Vehicle</string>
    <string name="add">Add</string>
    <string name="add_vendor">Add Vendor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="shop_details">Shop Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="shop_id">Shop ID</string>
    <string name="shop_name">Shop Name</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="vendors">Vendors</string>
    <string name="assign">Assign</string>
    <string name="enter_spare_name">Enter Spare Name</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="price">Price</string>
    <string name="spares_add_update">Add/Update Spare</string>
    <string name="approve_confirm_message">Do you want to approve this vendor?. Have you verified all details of this vendor?</string>
    <string name="approve_cancel_message">Do you want to reject this vendor?</string>
    <string name="approve">Approve</string>
    <string name="later">Later</string>
    <string name="reject">Reject</string>
    <string name="vendor_approve_error_msg">The vendor has not added any shops</string>
    <string name="ok">OK</string>
    <string name="other_charges">Other Charges</string>
    <string name="no_shops_available">Shop not added</string>
    <string name="it_seems_you_dont_have_any_vendors_added">It seems you don\'t have any Vendors added</string>
    <string name="view_details"><u>View Details</u></string>
    <string name="general_service_details_title">General Service\'s Items </string>
    <string name="booking_date">Booking date:</string>
    <string name="dd_mm_yy">DD-MM-YY</string>
    <string name="all_vehicles">All Vehicles</string>
    <string name="service_history">Service History</string>
    <string name="choose_manufacturer">Choose Manufacturer</string>
    <string name="vehicles">Vehicles</string>
    <string name="update_vehicle">Update Vehicle</string>
    <string name="customer_details">Customer Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="phone_number_verification">Phone Number Verification</string>
    <string name="partner_register">Partner Register</string>
</resources>