<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_bookings">

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.bikeblooms.android.ui.service.MyServicesFragment"
        android:label="@string/title_bookings"
        tools:layout="@layout/fragment_my_services">
        <action
            android:id="@+id/action_navigation_bookings_to_navigation_service_detail"
            app:destination="@id/navigation_service_detail" />

    </fragment>

    <fragment
        android:id="@+id/navigation_service_detail"
        android:name="com.bikeblooms.android.ui.service.ServiceDetailFragment"
        android:label="@string/service_details"
        app:enterAnim="@anim/nav_slide_in_right"
        app:exitAnim="@anim/nav_slide_out_left"
        app:popEnterAnim="@anim/nav_slide_in_left"
        app:popExitAnim="@anim/nav_slide_out_right"
        tools:layout="@layout/fragment_service_detail">
        <argument
            android:name="service"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.Service"
            app:nullable="true" />
        <action
            android:id="@+id/action_navigation_service_detail_to_navigation_complaints_selection"
            app:destination="@id/navigation_complaints_selection" />
        <action
            android:id="@+id/action_navigation_service_detail_to_navigation_spares_selection"
            app:destination="@id/navigation_spares_selection" />

    </fragment>

    <fragment
        android:id="@+id/navigation_complaints_selection"
        android:name="com.bikeblooms.android.ui.service.compaints.ComplaintsSelectionFragment"
        android:label="@string/add_service"
        tools:layout="@layout/fragment_list_items">

        <argument
            android:name="complaints"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.ComplaintsList"
            app:nullable="true" />

    </fragment>

    <dialog
        android:id="@+id/navigation_spares_selection"
        android:name="com.bikeblooms.android.ui.service.compaints.SpareSelectionFragment"
        android:label="Select the spare"
        tools:layout="@layout/fragment_list_items">

        <argument
            android:name="spares"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.SpareListArgs"
            app:nullable="true" />

    </dialog>

    <fragment
        android:id="@+id/navigation_vendors"
        android:name="com.bikeblooms.android.ui.VendorListFragment"
        android:label="@string/vendors"
        tools:layout="@layout/fragment_list_items">
        <action
            android:id="@+id/action_navigation_vendors_to_navigation_user_detail"
            app:destination="@id/navigation_user_detail"
            app:enterAnim="@anim/nav_slide_in_right"
            app:exitAnim="@anim/nav_slide_out_left"
            app:popEnterAnim="@anim/nav_slide_in_left"
            app:popExitAnim="@anim/nav_slide_out_right" />
        <argument
            android:name="fromAssign"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="service"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.Service"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_detail"
        android:name="com.bikeblooms.android.ui.user.UserDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_user_detail">

        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.User"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bikeblooms.android.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_list_items" />

    <fragment
        android:id="@+id/navigation_vehicles"
        android:name="com.bikeblooms.android.ui.vehicles.AllVehiclesFragment"
        android:label="@string/all_vehicles"
        tools:layout="@layout/fragment_all_vehicles" />

    <fragment
        android:id="@+id/navigation_spares"
        android:name="com.bikeblooms.android.ui.spares.SparesFragment"
        android:label="@string/spares_add_update"
        tools:layout="@layout/fragment_list_items">
        <action
            android:id="@+id/action_navigation_spares_to_navigation_spares_update"
            app:destination="@id/navigation_spares_update"
            app:enterAnim="@anim/nav_slide_in_right"
            app:exitAnim="@anim/nav_slide_out_left"
            app:popEnterAnim="@anim/nav_slide_in_left"
            app:popExitAnim="@anim/nav_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_spares_update"
        android:name="com.bikeblooms.android.ui.spares.SpareAddUpdateFragment"
        android:label="@string/spares_add_update"
        tools:layout="@layout/fragment_spare_add_update">

        <argument
            android:name="isEdit"
            android:defaultValue="false"
            app:argType="boolean" />

        <argument
            android:name="spareItem"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.SpareItem"
            app:nullable="true" />

        <argument
            android:name="spareCategories"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.SpareCategories"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_vehicle_details"
        android:name="com.bikeblooms.android.ui.vehicles.VehicleDetailsFragment"
        android:label="@string/vehicle_details"
        tools:layout="@layout/fragment_vehicle_details">
        <action
            android:id="@+id/action_navigation_bookings_to_navigation_service_detail"
            app:destination="@id/navigation_service_detail" />
        <argument
            android:name="vehicle"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.Vehicle"
            app:nullable="true" />
    </fragment>
</navigation>