<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bikeblooms.android.ui.vehicles.MyVehiclesFragment"
        android:label="@string/my_vehicles"
        tools:layout="@layout/fragment_my_vehicles">
        <action
            android:id="@+id/action_navigation_home_to_navigation_add_service"
            app:destination="@id/navigation_add_service" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.bikeblooms.android.ui.service.MyServicesFragment"
        android:label="@string/title_bookings"
        tools:layout="@layout/fragment_my_services" />

    <fragment
        android:id="@+id/navigation_add_vehicle"
        android:name="com.bikeblooms.android.ui.dashboard.AddVehicleFragment"
        android:label="@string/title_bookings"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_vehicle_list"
            app:destination="@id/navigation_vehicle_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bikeblooms.android.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_list_items" />

    <fragment
        android:id="@+id/navigation_vehicle_list"
        android:name="com.bikeblooms.android.ui.vehicles.VehicleSelectionFragment"
        android:label="Vehicle List"
        tools:layout="@layout/fragment_list_items">

        <argument
            android:name="brands"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.Brands"
            app:nullable="true" />

        <argument
            android:name="vehicles"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.Vehicles"
            app:nullable="true" />
        <argument
            android:name="profiles"
            android:defaultValue="@null"
            app:argType="com.bikeblooms.android.model.ProfileItems"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_service"
        android:name="com.bikeblooms.android.ui.service.AddServiceFragment"
        android:label="@string/add_service"
        tools:layout="@layout/fragment_add_service">
        <argument
            android:name="vehicle"
            app:argType="com.bikeblooms.android.model.Vehicle" />

    </fragment>
</navigation>